<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tealeaves_3_bk"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:alpha="0.7"
        android:background="@drawable/border_layout"
        android:padding="@dimen/loginCardRadius"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="LOGIN"
            android:textColor="@color/primaryTextColor"
            android:textSize="40sp"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/EtUsername"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:hint="@string/login_name_hint"
                android:layout_weight="1"
                android:inputType="text"
                android:maxLines="1"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/baseline_account_circle_24"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/headerTextSize"
                android:drawableLeft="@drawable/baseline_account_circle_24" />





        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/EtPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="left"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_weight="1"
                android:drawableStart="@drawable/baseline_vpn_key_24"
                android:textColor="@color/colorPrimary"
                android:drawablePadding="20dp"
                android:textSize="@dimen/headerTextSize"/>


            <ImageView
                android:id="@+id/showHidePass"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight=".1"
                android:onClick="ShowHidePass"
                android:src="@drawable/show_hide_icon"
                tools:ignore="UsingOnClickInXml" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:id="@+id/LLError"
            android:visibility="gone"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invalid"
                android:textColor="#FF0000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:id="@+id/LLLoading"
            android:visibility="gone"
            android:layout_marginTop="20dp">

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/IvLoading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/loading_"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginButton"
                style="@style/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LOGIN"/>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>